# cargo-credits

./: CREDIT  Cargo.toml  README.md
src/: bundle.rs  cargo_toml.rs  cmd.rs  exit.rs  license_score.rs  main.rs  manifest.rs  metadata.rs  output.rs  rust_license.rs
