[package]
name = "cargo-credits"
version = "0.1.0"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2018"

description = "creates CREDITS file from LICENSE files of dependencies"
repository = "https://github.com/sinofseven/cargo-credits"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["license", "credits", "cli", "cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.47"
clap = "2.31"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
regex = "1.3"
toml = "0.5"
rustc_version = "0.2"
reqwest = { version = "0.10", features = ["blocking"] }

[dev-dependencies]
rstest = "0.6"
