[package]
name = "cargo-credits"
version = "0.2.0"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2021"

description = "display licenses of dependencies"
repository = "https://github.com/sinofseven/cargo-credits"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["license", "credits", "cli", "cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.4", features=["cargo"]}
cargo_metadata = { version = "0.15.0", default-features = false }
serde = {version = "1", features=["derive"]}
toml = "0.5.9"
colored = "2.0.0"
